# rust-smb

./: CLAUDE.md  Cargo.toml  README.md
src/: error.rs  lib.rs
src/auth/: mod.rs  ntlm.rs  ntlm_crypto.rs
src/client/: mod.rs
src/dcerpc/: mod.rs  ndr.rs  packet.rs  tests.rs  transport.rs
src/dcerpc/services/: mod.rs  samr.rs  srvsvc.rs
src/e2e_tests/: delete_operations.rs  file_operations.rs  loopback.rs  mod.rs  protocol_tests.rs  rename_operations.rs  scenarios.rs  simple_tests.rs  smb2_helper.rs  smbclient_tests.rs  test_context.rs
src/filesystem/: mod.rs  real_fs.rs
src/netbios/: frame.rs  mod.rs  name.rs
src/protocol/: constants.rs  header.rs  mod.rs  smb2_constants.rs  state.rs
src/protocol/messages/: common.rs  directory.rs  file_info.rs  file_ops.rs  info.rs  ioctl.rs  mod.rs  negotiate.rs  session.rs  tree.rs
src/server/: connection.rs  enumeration.rs  filesystem.rs  mod.rs  pipes.rs  real_filesystem.rs
src/transport/: mod.rs  tcp.rs
src/transport/tcp/: tests.rs
