[package]
name = "rust-smb"
version = "0.1.0"
edition = "2021"
authors = ["SMB Protocol Implementation"]
license = "MIT OR Apache-2.0"
description = "A safe, modular SMB protocol implementation in Rust with sans-io design"
repository = "https://github.com/example/rust-smb"

[dependencies]
# Core async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
byteorder = "1.5"
bytes = "1.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
ring = "0.17"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
md4 = "0.10"

# Authentication (optional, we'll implement NTLM ourselves for learning)
# sspi = { version = "0.13", optional = true }
# cross-krb5 = { version = "0.4", optional = true }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = "0.4"
bitflags = "2.6"
num-traits = "0.2"
num-derive = "0.4"
rand = "0.8"
regex = "1.10"
filetime = "0.2"
tempfile = "3.8"

# Async traits
async-trait = "0.1"

# CLI tools
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
# Testing
tokio-test = "0.4"
pretty_assertions = "1.4"
proptest = "1.6"
hex = "0.4"
env_logger = "0.11"

[[bin]]
name = "smb-server"
path = "src/bin/smb-server.rs"

[[bin]]
name = "smb-client"
path = "src/bin/smb-client.rs"

[features]
default = ["client", "server"]
client = []
server = []
experimental-smb3-encryption = []
kerberos = []
ntlm-v1 = []  # Legacy, not recommended

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
